<resources>
    <string name="app_name">Predator</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="invite_friends">Share App</string>
    <string name="privacy">Privacy</string>
    <string name="notifs">Notifications</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="re_enter_hint_password">Confirm Password</string>
    <string name="nic">Enter NIC ID</string>
    <string name="passport">Enter Passport ID</string>

    <string name="mob_num">Enter mobile numbers</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a Friend? Get registered in RescueMe now!</string>
    <string name="btn_link_to_register2">Not a Device Owner? Get registered in RescueMe now!</string>

    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Address to send you password reset instructions.</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email</string>
    <string name="map">View Friends </string>
    <string name="help_and_support">Help and Support</string>
    <string name="log_out">log out</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_ex">Ex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="chat">Chat</string>

    <!--Strings required for Chat feature-->
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">SIGN IN</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <!--End of strings required for chat feature-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alertme">AlertMe</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="tab_text_1">Device Owner</string>
    <string name="tab_text_2">Friend</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_something">SomethingActivity</string>
    <string name="title_activity_example">Example</string>
    <string name="group_image">Group Image</string>
    <string name="create_group">Create group</string>
</resources>
